--- a/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -31,16 +31,16 @@
                     </p:panelGrid>
 				</p:panelGrid>    
                     <p:menubar style="background: #b8d8f5; padding-left: 50px; padding-right: 20px;">
-                        <p:menuitem value="Mis Proyectos"  action="gotoprojects"
+                        <p:menuitem value="#{msg['template.myprojects']}"  action="gotoprojects"
                                             title="Mis Proyectos" style="margin-right:15px;" />
-                        <p:menuitem value="Mis Tickets" 
+                        <p:menuitem value="#{msg['template.mytickets']}" 
                                             title="Mis Tickets" style="margin-right:15px;" />
 						                                          
                         <p:submenu label="#{proyectoController.miembroAuth.apellidos}, #{proyectoController.miembroAuth.nombre}" style="float: right;" icon="fa fa-fw fa-user">
-                       	 		<p:menuitem action="gotoprofile" value="Profile"  immediate="true" icon="fa fa-fw fa-edit" ajax="false"/>
-                       	 		<p:menuitem value="Settings" immediate="true" icon="fa fa-fw fa-cog" ajax="false"/>
+                       	 		<p:menuitem action="gotoprofile" value="#{msg['template.profile']}"  immediate="true" icon="fa fa-fw fa-edit" ajax="false"/>
+                       	 		<p:menuitem value="#{msg['template.settings']}" immediate="true" icon="fa fa-fw fa-cog" ajax="false"/>
                        	 		<p:separator/>
-				                <p:menuitem action="#{loginController.logout}" value="Logout" immediate="true" icon="fa fa-fw fa-sign-out" ajax="false"/>
+				                <p:menuitem action="#{loginController.logout}" value="#{msg['template.logout']}" immediate="true" icon="fa fa-fw fa-sign-out" ajax="false"/>
 				            </p:submenu>
                     </p:menubar>
                     
