--- a/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/backlog.xhtml
@@ -15,13 +15,13 @@
 					styleClass="tittle" />
 
 				<p:tabMenu activeIndex="0" style="border: 0px;">
-					<p:menuitem value="Backlog" action="gotobacklog" title="Backlog">
+					<p:menuitem value="#{msg['projectMenu.backlog']}" action="gotobacklog" title="Backlog">
 					</p:menuitem>
-					<p:menuitem value="Board" action="gotoboard" title="Board">
+					<p:menuitem value="#{msg['projectMenu.board']}" action="gotoboard" title="Board">
 					</p:menuitem>
-					<p:menuitem value="Sprints" action="gotosprints" title="Sprints">
+					<p:menuitem value="#{msg['projectMenu.sprints']}" action="gotosprints" title="Sprints">
 					</p:menuitem>
-					<p:menuitem value="Detalles" action="gotoprojectdetails" title="Detalles">
+					<p:menuitem value="#{msg['projectMenu.details']}" action="gotoprojectdetails" title="Detalles">
 					</p:menuitem>
 
 				</p:tabMenu>
@@ -37,27 +37,27 @@
 				            styleClass="ui-icon ui-icon-arrow-4" />
 				    </p:column>
 					
-					<p:column headerText="Código"  width="15%">
+					<p:column headerText="#{msg['backlog.table.code']}"  width="15%">
 						<h:outputText value="#{historia.codigo}" />
 					</p:column>
 					
-					<p:column headerText="Nombre"  width="25%">
+					<p:column headerText="#{msg['backlog.table.name']}"  width="25%">
 						<h:outputText value="#{historia.nombre}" />
 					</p:column>
 
-					<p:column headerText="Descripcion"  width="30%">
+					<p:column headerText="#{msg['backlog.table.desc']}"  width="30%">
 						<h:outputText value="#{historia.descripcion}" />
 					</p:column>
 
-					<p:column headerText="Esfuerzo"  width="10%">
+					<p:column headerText="#{msg['backlog.table.effort']}"  width="10%">
 						<h:outputText value="#{historia.esfuerzo}" />
 					</p:column>
 					
-					<p:column headerText="Prioridad"  width="7%">
+					<p:column headerText="#{msg['backlog.table.priority']}"  width="7%">
 						<h:outputText value="#{historia.prioridad}" />
 					</p:column>
 
-					<p:column headerText="Acciones" style="text-align: -webkit-center;"
+					<p:column headerText="#{msg['backlog.table.actions']}" style="text-align: -webkit-center;"
 						width="10%">
 						<p:commandButton icon="fa fa-pencil" update=":dialogForm"
 							oncomplete="PF('editarHistoriaDialog').show()"
@@ -81,7 +81,7 @@
 
 				<p:toolbar style="float:right;">
 					<p:toolbarGroup>
-						<p:commandButton value="Nueva historia" icon="fa fa-plus"
+						<p:commandButton value="#{msg['backlog.button.newStory']}" icon="fa fa-plus"
 							actionListener="#{backlogController.nuevaHistoria}"
 							update="@form :dialogForm" oncomplete="PF('editarHistoriaDialog').show()"
 							styleClass="ui-button-success" style="margin-right: .5rem">
@@ -95,13 +95,13 @@
 
 			<p:confirmDialog id="deleteHistoriaDialog"
 				widgetVar="deleteHistoriaDialog" showEffect="fade" width="300"
-				responsive="true" message="Desea eliminar la Historia de Usuario?" header="Confirm"
+				responsive="true" message="#{msg['backlog.deleteHistoriaDialog.message']}" header="#{msg['backlog.deleteHistoriaDialog.header']}"
 				severity="warn">
-				<p:commandButton value="Sí" icon="pi pi-check"
+				<p:commandButton value="#{msg['backlog.deleteHistoriaDialog.yes']}" icon="pi pi-check"
 					actionListener="#{backlogController.eliminarHistoria}"
 					process="@this" oncomplete="PF('deleteHistoriaDialog').hide()"
 					update="@form" />
-				<p:commandButton value="No" type="button"
+				<p:commandButton value="#{msg['backlog.deleteHistoriaDialog.no']}" type="button"
 					styleClass="ui-button-secondary" icon="pi pi-times"
 					onclick="PF('deleteHistoriaDialog').hide()" />
 			</p:confirmDialog>
@@ -119,7 +119,7 @@
 					rendered="#{not empty backlogController.historiaSelec}">
 					<p:outputPanel id="manage-historia-content-nombre" class="ui-fluid">
 						<div class="p-field">
-							<p:outputLabel for="nombre">Nombre</p:outputLabel>
+							<p:outputLabel for="nombre">#{msg['backlog.editarHistoriaDialog.name']}</p:outputLabel>
 							<p:inputText id="nombre"
 								value="#{backlogController.historiaSelec.nombre}"
 								required="true" />
@@ -127,7 +127,7 @@
 					</p:outputPanel>
 					<p:outputPanel id="manage-historia-content-desc" class="ui-fluid">
 						<div class="p-field">
-							<p:outputLabel for="descripcion">Descripcion</p:outputLabel>
+							<p:outputLabel for="descripcion">#{msg['backlog.editarHistoriaDialog.desc']}</p:outputLabel>
 							<p:inputTextarea id="descripcion"
 								value="#{backlogController.historiaSelec.descripcion}" rows="9" />
 						</div>
@@ -135,7 +135,7 @@
 					<p:outputPanel id="manage-historia-content-esfuerzo"
 						class="ui-fluid">
 						<div class="p-field">
-							<p:outputLabel for="esfuerzo">Esfuerzo</p:outputLabel>
+							<p:outputLabel for="esfuerzo">#{msg['backlog.editarHistoriaDialog.effort']}</p:outputLabel>
 							<p:inputText id="esfuerzo"
 								value="#{backlogController.historiaSelec.esfuerzo}"
 								required="true" />
@@ -144,12 +144,12 @@
 				</p:panelGrid>
 
 				<f:facet name="footer">
-					<p:commandButton value="Cancelar" icon="fa fa-times"
+					<p:commandButton value="#{msg['backlog.editarHistoriaDialog.cancel']}" icon="fa fa-times"
 						onclick="PF('editarHistoriaDialog').hide()"
 						styleClass="ui-button-red" style="margin-right: 10px;">
 						<p:resetInput target=":dialogForm:editarHistoriaDialog" />
 						</p:commandButton>
-					<p:commandButton value="Guardar" icon="fa fa-check"
+					<p:commandButton value="#{msg['backlog.editarHistoriaDialog.save']}" icon="fa fa-check"
 						actionListener="#{backlogController.guardarHistoria}"
 						oncomplete="PF('editarHistoriaDialog').hide()" update=":form" />
 				</f:facet>
