--- a/scrumapp-jsf/src/main/webapp/views/board.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/board.xhtml
@@ -178,7 +178,7 @@
 			             <h:outputText value="#{msg['board.completed']}"/>
 			        </f:facet>
 					<p:dataViewGridItem>
-						<p:panel id="pnl4" header="#{historia.codigo}" collapsed="true"
+						<p:panel id="pnl4" collapsed="true"
 							toggleable="true" toggleSpeed="500" style="text-align:center; min-width:100%; background: #fffbe9;"
 							styleClass="pnl4">
 							<f:facet name="header" >
