--- a/scrumapp-jsf/src/main/webapp/views/profile.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/profile.xhtml
@@ -11,11 +11,11 @@
 
 			<p:panelGrid id="container" columns="1" layout="grid"
 				style="text-align: -webkit-center; width: 400px; align: center; border: 0px;">
-				<h:outputText value="Mi Perfil" styleClass="tittle" />
+				<h:outputText value="#{msg['profile.tittle']}" styleClass="tittle" />
 
 				<p:outputPanel id="manage-historia-content-nombre" class="ui-fluid" style="text-align: left;">
 					<div class="p-field">
-						<p:outputLabel for="nombre">Nombre</p:outputLabel>
+						<p:outputLabel for="nombre">#{msg['profile.label.name']}</p:outputLabel>
 						<p:inputText id="nombre"
 							value="#{perfilController.miembro.nombre}" required="true" />
 					</div>
@@ -23,7 +23,7 @@
 
 				<p:outputPanel id="manage-historia-content-v" class="ui-fluid" style="text-align: left;">
 					<div class="p-field">
-						<p:outputLabel for="apellidos">Apellidos</p:outputLabel>
+						<p:outputLabel for="apellidos">#{msg['profile.label.surname']}</p:outputLabel>
 						<p:inputText id="apellidos"
 							value="#{perfilController.miembro.apellidos}" required="true" />
 					</div>
@@ -31,7 +31,7 @@
 
 				<p:outputPanel id="manage-historia-content-email" class="ui-fluid" style="text-align: left;">
 					<div class="p-field">
-						<p:outputLabel for="email">Email</p:outputLabel>
+						<p:outputLabel for="email">#{msg['profile.label.email']}</p:outputLabel>
 						<p:inputText id="email" value="#{perfilController.email}"
 							required="true" />
 					</div>
@@ -39,16 +39,16 @@
 
 				<p:outputPanel id="manage-historia-content-telefono" class="ui-fluid" style="text-align: left; margin-bottom: 20px;">
 					<div class="p-field">
-						<p:outputLabel for="telefono">Teléfono</p:outputLabel>
+						<p:outputLabel for="telefono">#{msg['profile.label.phone']}</p:outputLabel>
 						<p:inputText id="telefono"
 							value="#{perfilController.miembro.telefono}" required="true" />
 					</div>
 				</p:outputPanel>
 				
-				<h:outputText value="Cambiar contraseña" styleClass="subtittle"/>
+				<h:outputText value="#{msg['profile.label.changepasswd']}" styleClass="subtittle"/>
 				<p:outputPanel id="manage-historia-content-pwd" class="ui-fluid" style="text-align: left;">
 					<div class="p-field">
-						<p:outputLabel for="password">Contraseña</p:outputLabel>
+						<p:outputLabel for="password">#{msg['profile.label.password']}</p:outputLabel>
 						<p:password id="password"
 							value="#{perfilController.password}" />
 					</div>
@@ -56,14 +56,14 @@
 
 				<p:outputPanel id="manage-historia-content-pwd2" class="ui-fluid" style="text-align: left;">
 					<div class="p-field">
-						<p:outputLabel for="passwordRep">Repite la Contraseña</p:outputLabel>
+						<p:outputLabel for="passwordRep">#{msg['profile.label.repeatpwd']}</p:outputLabel>
 						<p:password id="passwordRep" value="#{perfilController.passwordRep}" />
 					</div>
 				</p:outputPanel>
 
 				<p:toolbar style="float:right;">
 					<p:toolbarGroup>
-						<p:commandButton value="Guardar" icon="fa fa-save"
+						<p:commandButton value="#{msg['profile.button.save']}" icon="fa fa-save"
 							actionListener="#{perfilController.guardarPerfil}" update=":formMenu @form"
 							styleClass="ui-button-success" style="margin-right: .5rem">
 						</p:commandButton>
